--- a/references.bib
+++ b/references.bib
@@ -23,6 +23,20 @@
   publisher={John Wiley \& Sons}
 }
 
+@article{blangiardo2013spatial,
+title = {Spatial and spatio-temporal models with R-INLA},
+journal = {Spatial and Spatio-temporal Epidemiology},
+volume = {4},
+pages = {33-49},
+year = {2013},
+issn = {1877-5845},
+doi = {https://doi.org/10.1016/j.sste.2012.12.001},
+url = {https://www.sciencedirect.com/science/article/pii/S1877584512000846},
+author = {Marta Blangiardo and Michela Cameletti and Gianluca Baio and Håvard Rue},
+keywords = {Integrated Nested Laplace Approximation, Stochastic Partial Differential Equation approach, Bayesian approach, Area-level data, Point-level data},
+abstract = {During the last three decades, Bayesian methods have developed greatly in the field of epidemiology. Their main challenge focusses around computation, but the advent of Markov Chain Monte Carlo methods (MCMC) and in particular of the WinBUGS software has opened the doors of Bayesian modelling to the wide research community. However model complexity and database dimension still remain a constraint. Recently the use of Gaussian random fields has become increasingly popular in epidemiology as very often epidemiological data are characterised by a spatial and/or temporal structure which needs to be taken into account in the inferential process. The Integrated Nested Laplace Approximation (INLA) approach has been developed as a computationally efficient alternative to MCMC and the availability of an R package (R-INLA) allows researchers to easily apply this method. In this paper we review the INLA approach and present some applications on spatial and spatio-temporal data.}
+}
+
 @article{rue2007approximate,
   title={{Approximate Bayesian inference for hierarchical Gaussian Markov random field models}},
   author={Rue, H{\aa}vard and Martino, Sara},
@@ -2590,4 +2604,69 @@ year = {2006}
   year={2015}
 }
 
+@article{bhatt2015effect,
+  title={The effect of malaria control on Plasmodium falciparum in Africa between 2000 and 2015},
+  author={Bhatt, Samir and Weiss, DJ and Cameron, E and Bisanzio, D and Mappin, B and Dalrymple, U and Battle, KE and Moyes, CL and Henry, A and Eckhoff, PA and others},
+  journal={Nature},
+  volume={526},
+  number={7572},
+  pages={207--211},
+  year={2015},
+  publisher={Nature Publishing Group UK London}
+}
 
+@techreport{mayala2020predicting,
+  author = {Mayala, Benjamin K. and Bhatt, Samir and Gething, Peter},
+  title = {Predicting {HIV/AIDS} at Subnational Levels using {DHS} Covariates related to {HIV}},
+  institution = {ICF},
+  year = {2020},
+  type = {DHS Spatial Analysis Reports},
+  number = {18},
+  address = {Rockville, Maryland, USA}
+}
+
+@article{morris2019bayesian,
+title = {Bayesian hierarchical spatial models: Implementing the Besag York Mollié model in stan},
+journal = {Spatial and Spatio-temporal Epidemiology},
+volume = {31},
+pages = {100301},
+year = {2019},
+issn = {1877-5845},
+doi = {https://doi.org/10.1016/j.sste.2019.100301},
+url = {https://www.sciencedirect.com/science/article/pii/S1877584518301175},
+author = {Mitzi Morris and Katherine Wheeler-Martin and Dan Simpson and Stephen J. Mooney and Andrew Gelman and Charles DiMaggio},
+}
+
+@Article{conegan2022geostan,
+  title = {{geostan}: An {R} package for {B}ayesian spatial analysis},
+  author = {Connor Donegan},
+  journal = {The Journal of Open Source Software},
+  year = {2022},
+  volume = {7},
+  number = {79},
+  pages = {4716},
+  doi = {10.21105/joss.04716},
+}
+
+@incollection{saunders2023pymc,
+  author    = "Daniel Saunders",
+  title     = "The Besag-York-Mollie Model for Spatial Data",
+  editor    = "PyMC Team",
+  booktitle = "PyMC examples",
+  doi       = "10.5281/zenodo.5654871",
+  year = {2023}
+}
+
+@article{wilson2018pointless,
+    author = {Wilson, Katie and Wakefield, Jon},
+    title = "{Pointless spatial modeling}",
+    journal = {Biostatistics},
+    volume = {21},
+    number = {2},
+    pages = {e17-e32},
+    year = {2018},
+    month = {09},
+    issn = {1465-4644},
+    doi = {10.1093/biostatistics/kxy041},
+    url = {https://doi.org/10.1093/biostatistics/kxy041},
+}
