More cites, give up with RFsimulate and start using gstat::krige

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -41,7 +41,7 @@ As a result, it has been widely used, including:
 
 * to model bird population dynamics from capture-recapture data [@saracco2010modeling];
 * for the analysis of magnetic resonance images [@gossl2001bayesian; @schmid2006bayesian];
-* to map mortality from cancers [@rashid2023inequalities];
+* to map mortality from cancers [@rashid2023inequalities], injuries [@parks2020anomalously] and air pollution [@bennett2019particulate];
 * to model alcohol use patterns [@dwyer2015drinking].
 
 The Besag model was designed for use in image analysis, on a regular grid.
