--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -932,7 +932,13 @@ Section 2.2 of @brown2015model demonstrates use of `R-INLA` to fit a simpler LGM
 
 Table: (\#tab:loaloa-approaches) The inference methods and software considered.
 
-Following @bilodeau2022stochastic, the `geostatsp::RFsimulate` [@brown2015model] was used as a wrapper to the `RandomFields` R package [@schlather2015analysis] to implement conditional Gaussian field simulation with hyperparameter samples.
+The `gstat::krige` function [@pebesma2004gstat] was used to implement conditional Gaussian field simulation [@sds; Chapter 12] passing in hyperparameter samples one-at-a-time to the `model` argument.
+
+(ref:conditional-simulation) Figure caption.
+
+```{r conditional-simulation, fig.cap="(ref:conditional-simulation)"}
+knitr::include_graphics("figures/naomi-aghq/conditional-simulation.png")
+```
 
 ## The Naomi model {#naomi}
 
