--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -21,7 +21,7 @@ resource_version <- "20230811-095752-5b8181d8"
 ```{cpp, echo=TRUE, eval=FALSE, output.var="epil", code=readLines("resources/naomi-aghq/epil.stan")}
 ```
 
-### NUTS convergence diagnostics
+### NUTS convergence and suitability
 
 #### `tmbstan` {#tmbstan-epil}
 
@@ -291,7 +291,7 @@ Table: (\#tab:tmb-lookup)
 
 ## Inference comparison
 
-## MCMC convergence and suitability
+## NUTS convergence and suitability
 
 ```{r rhat, fig.cap="The potential scale reduction factor compares between- and within- estimates of univariate parameters. It is recommended only to use NUTS results if the value is less than 1.05, which it is for all parameters."}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/rhat.png"))
