--- a/references.bib
+++ b/references.bib
@@ -2670,3 +2670,43 @@ author = {Mitzi Morris and Katherine Wheeler-Martin and Dan Simpson and Stephen 
     doi = {10.1093/biostatistics/kxy041},
     url = {https://doi.org/10.1093/biostatistics/kxy041},
 }
+
+@article{parks2020anomalously,
+  title={Anomalously warm temperatures are associated with increased injury deaths},
+  author={Parks, Robbie M and Bennett, James E and Tamura-Wicks, Helen and Kontis, Vasilis and Toumi, Ralf and Danaei, Goodarz and Ezzati, Majid},
+  journal={Nature medicine},
+  volume={26},
+  number={1},
+  pages={65--70},
+  year={2020},
+  publisher={Nature Publishing Group US New York}
+}
+
+@article{bennett2019particulate,
+  title={Particulate matter air pollution and national and county life expectancy loss in the USA: A spatiotemporal analysis},
+  author={Bennett, James E and Tamura-Wicks, Helen and Parks, Robbie M and Burnett, Richard T and Pope III, C Arden and Bechle, Matthew J and Marshall, Julian D and Danaei, Goodarz and Ezzati, Majid},
+  journal={PLoS medicine},
+  volume={16},
+  number={7},
+  pages={e1002856},
+  year={2019},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@Article{pebesma2004gstat,
+  title = {Multivariable geostatistics in {S}: the gstat package},
+  author = {Edzer J. Pebesma},
+  journal = {Computers \& Geosciences},
+  year = {2004},
+  volume = {30},
+  pages = {683-691},
+}
+
+@book{sds,
+  author = {Edzer Pebesma and Roger Bivand},
+  year = 2023,
+  title = {{Spatial Data Science: With Applications in R}},
+  publisher = {Chapman and Hall/CRC},
+  URL = {https://doi.org/10.1201/9780429459016},
+  doi = {10.1201/9780429459016}
+}
