Conditional simulation figure finished!

--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -932,9 +932,9 @@ Section 2.2 of @brown2015model demonstrates use of `R-INLA` to fit a simpler LGM
 
 Table: (\#tab:loaloa-approaches) The inference methods and software considered.
 
-The `gstat::krige` function [@pebesma2004gstat] was used to implement conditional Gaussian field simulation [@sds; Chapter 12] passing in hyperparameter samples one-at-a-time to the `model` argument.
+The `gstat::krige` function [@pebesma2004gstat] was used to implement conditional Gaussian field simulation [@sds; Chapter 12] passing in random effect and hyperparameter samples to create each simulation (Figure \@ref(fig:conditional-simulation)).
 
-(ref:conditional-simulation) Figure caption.
+(ref:conditional-simulation) Posterior mean of the suitability $\mathbb{E}[\phi(s)]$ (Panel A) and prevalence $\mathbb{E}[\rho(s)]$ (Panel B) random fields.
 
 ```{r conditional-simulation, fig.cap="(ref:conditional-simulation)"}
 knitr::include_graphics("figures/naomi-aghq/conditional-simulation.png")
